isuse#81 Improvement: UI has several places to be improved  (#121)
* arksec-risk-portal modify

* arksec-risk-portal modify

* word for camel apart

* cluster chart and table updates

* namespace chart and table updates

* Replace kube bench chart

* word for camel apart

* image/workload detail pages support width dragging

* word for camel apart

* word for camel apart

* Remove useless commented code

* Remove useless commented code

Co-authored-by: qijianshuai <qjianshuai@vmware.com>

--- a/src/frontend/src/app/view/assements/kube-bench-report-list/kube-bench-report-list.component.css
+++ b/src/frontend/src/app/view/assements/kube-bench-report-list/kube-bench-report-list.component.css
@@ -33,7 +33,10 @@
   top: 150px;
 }
 .chart-warp {
-  width: 1400px;
+  display: flex;
+  justify-content: space-evenly;
+  flex: 1;
+  overflow: hidden;
   height: 400px;
   padding-bottom: 20px;
   box-sizing: content-box;
