--- a/src/frontend/src/app/view/assements/kube-bench-report-list/kube-bench-report-list.component.less
+++ b/src/frontend/src/app/view/assements/kube-bench-report-list/kube-bench-report-list.component.less
@@ -43,8 +43,10 @@
   }
 }
 .chart-warp {
-  // display: flex;
-  width: 1400px;
+  display: flex;
+  justify-content: space-evenly;
+  flex: 1;
+  overflow: hidden;
   height:400px;
   padding-bottom: 20px;
   box-sizing: content-box;
