--- a/src/frontend/src/app/view/assements/kube-bench-report-test-detail/kube-bench-report-test-detail.component.html
+++ b/src/frontend/src/app/view/assements/kube-bench-report-test-detail/kube-bench-report-test-detail.component.html
@@ -33,7 +33,7 @@
           <cds-icon shape="check-circle" class="is_solid"></cds-icon>
           {{kube.status}}
         </span>
-        <span class="status fail" *ngIf="kube.status === 'FAIl'">
+        <span class="status fail" *ngIf="kube.status === 'FAIL'">
           <cds-icon shape="exclamation-circle" class="is_solid"></cds-icon>
           {{kube.status}}
         </span>
