--- a/src/frontend/src/app/view/assements/report-view/report-view.component.less
+++ b/src/frontend/src/app/view/assements/report-view/report-view.component.less
@@ -18,18 +18,17 @@
     width: 100%;
     height: 100%;
     .report-detai {
-      position: absolute;
-      right: -700px;
-      top: 0;
-      width: 1200px;
+      // position: relative;
+      // right: 0;
+      // top: 0;
       height: auto;
       min-height: 100vh;
       opacity: 0;
-      transition: right 5s, opacity 2s;
+      // transition: right 5s, opacity 2s;
       &.show {
-        right: 0;
+        // right: 0;
         opacity: 1;
-        transition: right 5s, opacity 2s;
+        // transition: right 5s, opacity 2s;
       }
     }
   }
@@ -88,6 +87,27 @@
           color: #fff;
         }
       }
+    }
+  }
+  #box {
+    flex: 1;
+    #resize {
+      width: 5px;
+      height: 100%;
+      cursor: w-resize;
+      float: left;
+      position: relative;
+      left: 0px;
+      background-color: #21333B;
+    }
+    #right {
+      width: 445px;
+      float: right;
+    }
+    #left {
+      float: left;
+      width: calc(100% - 450px);
+      height: 100%;
     }
   }
 }
