Replace the insight data source cr with open search

--- a/src/frontend/src/app/view/assements/kube-bench-report-list/kube-bench-report-list.component.html
+++ b/src/frontend/src/app/view/assements/kube-bench-report-list/kube-bench-report-list.component.html
@@ -76,7 +76,7 @@
       <clr-dg-cell *ngIf="kube">
         <a href="javascript:;" (click)="toKubeBenchReportTests(kube)" >
           <cds-icon shape="pop-out"></cds-icon>
-          {{kube._id}}
+          {{kube._source.docID}}
         </a>
       </clr-dg-cell>
       <clr-dg-cell *ngIf="kube">{{kube._source.text}}</clr-dg-cell>
