--- a/src/frontend/src/app/view/assements/report-view-detail/report-view-detail.component.html
+++ b/src/frontend/src/app/view/assements/report-view-detail/report-view-detail.component.html
@@ -17,7 +17,7 @@
           </li>
           <li>
             <b>Name: </b>
-            <span>{{shardService.currentReport?._id}}</span>
+            <span>{{shardService.currentReport?._source.docId}}</span>
           </li>
           <li>
             <b>Namespace: </b>
