--- a/src/frontend/src/app/view/insight/cluster-page/cluster-page.component.html
+++ b/src/frontend/src/app/view/insight/cluster-page/cluster-page.component.html
@@ -78,7 +78,7 @@
               </div>
               <app-packedbubble #packedbubble></app-packedbubble> 
               </div>
-              <app-cluster-line #reportline2 [chartOptions]="shardService.clusterLineChartOption" [updateFlag]='true'></app-cluster-line>
+              <!-- <app-cluster-line #reportline2 [chartOptions]="shardService.clusterLineChartOption" [updateFlag]='true'></app-cluster-line> -->
           </clr-tab-content>
         </ng-template>
       </clr-tab>
